--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -17,6 +17,34 @@ spring:
    idle-timeout: 3000
    max-lifetime: 1800000
    connection-timeout: 30000
+ security:
+     oauth2:
+       client:
+         registration:
+           kakao:
+             client-id: dbda976eb054714809926c699703fc3b
+             client-secret: IKdsMnzh7RZtKoub161cFADP8ASc6pml
+             authorization-grant-type: authorization_code
+             client-authentication-method: client_secret_post
+             redirect-uri: "{baseUrl}/login/oauth2/code/kakao"
+             client-name: Kakao
+           naver:
+             client-id: 0hXy2isjmPP_8MICXjsZ
+             client-secret: lpMGBLOWuv
+             authorization-grant-type: authorization_code
+             redirect-uri: "{baseUrl}/login/oauth2/code/naver"
+             client-name: Naver
+         provider:
+           kakao:
+             authorization-uri: https://kauth.kakao.com/oauth/authorize
+             token-uri: https://kauth.kakao.com/oauth/token
+             user-info-uri: https://kapi.kakao.com/v2/user/me
+             user-name-attribute: id
+           naver:
+             authorization-uri: https://nid.naver.com/oauth2.0/authorize
+             token-uri: https://nid.naver.com/oauth2.0/token
+             user-info-uri: https://openapi.naver.com/v1/nid/me
+             user-name-attribute: response # 네이버는 response 키 안에 정보가 있음
 #mybatis
 mybatis:
  type-aliases-package: com.sist.web.vo
