--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -17,6 +17,11 @@ spring:
    idle-timeout: 3000
    max-lifetime: 1800000
    connection-timeout: 30000
+ servlet:
+   multipart: 
+     enabled: true
+     max-file-size: 100MB
+     max-request-size: 100MB
  security:
      oauth2:
        client:
