--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,5 +1,7 @@
 #port => 저장하지 않는 경우 : 8080 => 9090 : ufw = > 포트 허용
 #MVC => SpringFramework와 동일
+server:
+  port: 9090
 map-key: 6ae49e824de560c4d4a79bf5be38eee9 
 spring:
  mvc:
